--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@react-navigation/stack": "^7.4.7",
-    "expo": "~53.0.20",
+    "expo": "^54.0.3",
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
     "lottie-react-native": "^7.3.4",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react": "^19.1.0",
+    "react-native": "0.81.4",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-dots-pagination": "^0.3.1",
     "react-native-modal": "^14.0.0-rc.1",
@@ -27,7 +27,8 @@
     "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^20.0.2"
   },
   "private": true
 }
