--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@react-navigation/stack": "^7.4.7",
+    "axios": "^1.12.2",
     "expo": "^54.0.3",
     "expo-image-picker": "~16.1.4",
+    "expo-sqlite": "^16.0.8",
     "expo-status-bar": "~2.2.3",
     "lottie-react-native": "^7.3.4",
     "react": "^19.1.0",
